deletei o arquivo desktop.ini, passei a usar strict mode em todas as funções do javascript, e consertei o prblema da animação da bolinha para o chrome.

--- a/siteTreino/index.html
+++ b/siteTreino/index.html
@@ -88,14 +88,14 @@
 	<p>Clique na bolinha para mudar a cor</p>
 	<div id="container-esquerda" class="container">
 		<div id="caixa-esquerda" class="caixa">
-			<div class="bolinha" id="bola-parada" onclick="clickBolinha(this)">
+			<div class="bolinha" id="bola-parada" onclick="mudaCor(this)">
 			
 			</div>
 		</div>
 	</div>
 	<div id="container-direita" class="container">
 		<div id="caixa-direita" class="caixa">
-			<div class="bolinha" id="bola-quique" onclick="clickBolinha(this)">
+			<div class="bolinha" id="bola-quique" onclick="mudaCor(this)">
 			
 			</div>
 		</div>
