--- a/siteTreino/index.html
+++ b/siteTreino/index.html
@@ -109,7 +109,7 @@
             <li><a href="https://www.youtube.com/watch?v=-HojjNHsje8">Jam com Fernando</a></li>
             <li><a href="https://www.youtube.com/watch?v=YSHVpgqwFO8">Tentativa de música com Fernando</a></li>
         </ul>
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/_dFsXT6cxGY">
+        <iframe src="https://www.youtube.com/embed/_dFsXT6cxGY">
         </iframe>
      
     </section>
