--- a/siteTreino/semFramework/puro.html
+++ b/siteTreino/semFramework/puro.html
@@ -112,10 +112,10 @@
         </ul>
         
         <div class="embedded-video">
-            <div class="faixa" id="faixa-esquerda"><button id="previous">&lt;&lt;</button></div>
+            <div class="faixa" id="faixa-esquerda"><button id="previous" onclick="passaVideo(this)">&lt;&lt;</button></div>
             <iframe id="video-frame" src="https://www.youtube.com/embed/_dFsXT6cxGY"><!-- ?rel=0&autoplay=1 -->
             </iframe>
-            <div class="faixa" id="faixa-direita"><button id="next">&gt;&gt;</button></div>
+            <div class="faixa" id="faixa-direita"><button id="next" onclick="passaVideo(this)">&gt;&gt;</button></div>
         </div>
         
         <nav>
