mudei o nome de puro.html para index.html, adicionei allowfullscreen ao iframe do vídeo e rel=0 para não tocar os outros videos relacionados

--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -113,7 +113,7 @@
         
         <div class="embedded-video">
             <div class="faixa" id="faixa-esquerda"><button id="previous" onclick="passaVideo(this)">&lt;&lt;</button></div>
-            <iframe id="video-frame" src="https://www.youtube.com/embed/_dFsXT6cxGY"><!-- ?rel=0&autoplay=1 -->
+            <iframe id="video-frame" src="https://www.youtube.com/embed/_dFsXT6cxGY?rel=0" allowfullscreen><!-- ?rel=0&autoplay=1 -->
             </iframe>
             <div class="faixa" id="faixa-direita"><button id="next" onclick="passaVideo(this)">&gt;&gt;</button></div>
         </div>
