Ultimos retoques no menu dos vídeos

--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -119,9 +119,9 @@
         </div>
         
         <nav>
-            <ul>
+            <ul class="bottom-menu">
                 <li><a class="menu-video" title="vídeo anterior" id="back" onclick="mudaVideo(this)">&lt;&lt;</a></li> 
-                <li><a class="menu-video" title="Voodoo Child Jam" onclick="mudaVideo(this)">1</a></li> 
+                <li id="voodoo-child"><a class="menu-video" title="Voodoo Child Jam" onclick="mudaVideo(this)">1</a></li> 
                 <li><a class="menu-video" title="Vídeo de 2011" onclick="mudaVideo(this)">2</a></li>
                 <li><a class="menu-video" title="Jam com Fernando" onclick="mudaVideo(this)">3</a></li>
                 <li><a class="menu-video" title="Tentativa de música com Fernando" onclick="mudaVideo(this)">4</a></li> 
