Coloquei um botão para descobrir a largura da tela dos aparelhos

--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -34,6 +34,8 @@
     <div class="conteudo">
 	
     <p class="saudacao">Olá. Bem-vindo(a) ao meu site treino.</p>
+    <p>Aperte o botão para descobrir a largura da sua tela em pixels</p>
+    <button id="figure-pixels" onclick="alert('Window width: ' + window.innerWidth + 'px')">Descubra</button>
 	
 	<section id="formulario">
 	
