Ajustes no menu para as telas

--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -35,7 +35,7 @@
 	
     <p class="saudacao">Olá. Bem-vindo(a) ao meu site treino.</p>
     <p>Aperte o botão para descobrir a largura da sua tela em pixels</p>
-    <button id="figure-pixels" onclick="alert('Window width: ' + window.innerWidth + 'px')">Descubra</button>
+    <button id="figure-pixels" onclick="testaWindow()">Descubra</button>
 	
 	<section id="formulario">
 	
