melhoradas as animações

--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -154,6 +154,7 @@
             <button id="play" class="controle">Iniciar</button>
             <button id="restart" class="controle">Reiniciar</button>
         </div>
+        <div class="clearfix"></div>
 	</section>
 	
 	<hr>
