adicionado link para no novo site

--- a/siteGV/index.html
+++ b/siteGV/index.html
@@ -18,6 +18,7 @@
 				<li><a>Nossos Alunos</a></li>
 				<li><a>Fale Conosco</a></li>
 			</ul>
+            <a href="indexNew.html"><h3>Ir para o novo site</h3></a>
             <a href="adminSite.html"><h3>Ir para área de administração</h3></a>
 		</nav>
         
