--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -36,6 +36,8 @@
     <p class="saudacao">Olá. Bem-vindo(a) ao meu site treino.</p>
     <p>Aperte o botão para descobrir a largura da sua tela em pixels</p>
     <button id="figure-pixels" onclick="testaWindow()">Descubra</button>
+        
+    <img id="palheta" src="../imagens/icon-palheta-GV.png" alt="palheta GV">
 	
 	<section id="formulario">
 	
@@ -155,6 +157,8 @@
             <button id="restart" class="controle">Reiniciar</button>
         </div>
         <div class="clearfix"></div>
+        
+        <img src="../imagens/icon-palheta-GV.png" alt="palheta GV">
 	</section>
 	
 	<hr>
