coloquei o grid nas paginas

--- a/siteGV/Cursos/index.html
+++ b/siteGV/Cursos/index.html
@@ -24,7 +24,7 @@
 		</nav>
     </header>
     <main>
-        <nav class="menu-lateral">
+        <nav class="menu-lateral col-2">
             <h2 class="offscreen">Menu Lateral</h2>
 			<ul>
 				<li><a>A Escola</a></li>
