--- a/siteGV/Dicas/primeiras-dicas.html
+++ b/siteGV/Dicas/primeiras-dicas.html
@@ -29,7 +29,7 @@
 		</nav>
     </header>
     <main class="clearfix">
-        <nav class="menu-lateral">
+        <nav class="menu-lateral col-2">
             <h2 class="offscreen">Menu Lateral</h2>
 			<ul>
                 <li><a title="A fazer o link correto">Home</a></li>
@@ -45,7 +45,7 @@
 		</nav>
         
         <div class="conteudo">
-        <section id="videos-dicas">
+        <section id="videos-dicas col-8">
             <h1>Dicas GV</h1>
             <p>Série de vídeos com grandes dicas para se tornar um músico melhor.</p>
             
