coloquei o path certo pra logo

--- a/siteGV/Dicas/primeiras-dicas.html
+++ b/siteGV/Dicas/primeiras-dicas.html
@@ -10,8 +10,8 @@
     <header id="header-logo" class="clearfix">
         <h1 class="offscreen">Site do Guitarra Virtual</h1>
         <picture class="logo">
-            <source media="(min-width: 750px)" srcset="img/logo_gv-250wid.png">
-            <img src="img/logo_gv-150wid.png" alt="Logo GV">
+            <source media="(min-width: 750px)" srcset="../img/logo_gv-250wid.png">
+            <img src="../img/logo_gv-150wid.png" alt="Logo GV">
         </picture>
         <nav class="menu-top">
             <h2 class="offscreen">Menu Topo</h2>
