mudanças para deixar o site mais completo e apresentável

--- a/siteGV/Videos/primeiros-videos.html
+++ b/siteGV/Videos/primeiros-videos.html
@@ -11,17 +11,17 @@
     <header id="header-logo" class="clearfix">
         <h1 class="offscreen">Site do Guitarra Virtual</h1>
         <picture class="logo">
-            <source media="(min-width: 750px)" srcset="img/logo_gv-250wid.png">
-            <img src="img/logo_gv-150wid.png" alt="Logo GV">
+            <source media="(min-width: 750px)" srcset="../img/logo_gv-250wid.png">
+            <img src="../img/logo_gv-150wid.png" alt="Logo GV">
         </picture>
         <nav class="menu-top">
             <h2 class="offscreen">Menu Topo</h2>
 			<ul>
-                <li><a title="A fazer o link correto">Home</a></li>
+                <li><a href="../indexNew.html">Home</a></li>
 				<li><a href="../escola.html">A Escola</a></li>
-                <li><a href="../Cursos/Cursos/index.html">Cursos</a></li>
-                <li><a>Artigos</a></li>
-				<li><a>Vídeos</a></li>
+                <li><a href="../Cursos/index.html">Cursos</a></li>
+                <li><a href="../Artigos/primeiros-artigos.html">Artigos</a></li>
+				<li><a href="primeiros-videos.html">Vídeos</a></li>
                 <li><a href="../Dicas/primeiras-dicas.html">Dicas</a></li>
 				<li><a>Serviços</a></li>
 				<li><a>Nossos Alunos</a></li>
@@ -33,12 +33,12 @@
         <nav class="menu-lateral col-2">
             <h2 class="offscreen">Menu Lateral</h2>
 			<ul>
-                <li><a title="A fazer o link correto">Home</a></li>
-				<li><a href="escola.html">A Escola</a></li>
-                <li><a href="Cursos/index.html">Cursos</a></li>
-                <li><a>Artigos</a></li>
-				<li><a>Vídeos</a></li>
-                <li><a href="Dicas/primeiras-dicas.html">Dicas</a></li>
+                <li><a href="../indexNew.html">Home</a></li>
+				<li><a href="../escola.html">A Escola</a></li>
+                <li><a href="../Cursos/index.html">Cursos</a></li>
+                <li><a href="../Artigos/primeiros-artigos.html">Artigos</a></li>
+				<li><a href="primeiros-videos.html">Vídeos</a></li>
+                <li><a href="../Dicas/primeiras-dicas.html">Dicas</a></li>
 				<li><a>Serviços</a></li>
 				<li><a>Nossos Alunos</a></li>
 				<li><a>Fale Conosco</a></li>
@@ -48,6 +48,22 @@
         <div class="conteudo col-8">
         <h1>Vídeos</h1>
         <section id="videos-bernardo">
+            <h2>Vídeos do Bernardo Amado</h2>
+            <h2>Links para assistir no YouTube</h2>
+            <nav>
+            <ul class="ul-GV">
+                <!-- sem usar target=_blank
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=_dFsXT6cxGY">Voodoo Child Jam</a></li>
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=5Hfrbl62JgY">Vídeo de 2011</a></li>
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=-HojjNHsje8">Jam com Fernando</a></li>
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=YSHVpgqwFO8">Tentativa de música com Fernando</a></li>
+                -->
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=_dFsXT6cxGY" target="_blank">Voodoo Child Jam</a></li>
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=5Hfrbl62JgY" target="_blank">Vídeo de 2011</a></li>
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=-HojjNHsje8" target="_blank">Jam com Fernando</a></li>
+                <li><a class="video-youtube" href="https://www.youtube.com/watch?v=YSHVpgqwFO8" target="_blank">Tentativa de música com Fernando</a></li>
+            </ul>
+            </nav>
             <div class="embedded-video">
                 <div class="faixa" id="faixa-esquerda"><button id="previous" onclick="passaVideo(this)">&lt;&lt;</button></div>
                 <iframe id="video-frame" src="https://www.youtube.com/embed/_dFsXT6cxGY?rel=0" allowfullscreen><!-- ?rel=0&autoplay=1 -->
