--- a/siteGV/indexNew.html
+++ b/siteGV/indexNew.html
@@ -27,12 +27,12 @@
         <nav class="menu-top">
             <h2 class="offscreen">Menu Topo</h2>
 			<ul>
-                <li><a title="A fazer o link correto">Home</a></li>
+                <li><a href="indexNew.html">Home</a></li>
 				<li><a href="escola.html">A Escola</a></li>
                 <li><a href="Cursos/index.html">Cursos</a></li>
-                <li><a>Artigos</a></li>
-				<li><a>Vídeos</a></li>
-                <li><a href="#">Dicas</a></li>
+                <li><a href="Artigos/primeiros-artigos.html">Artigos</a></li>
+				<li><a href="Videos/primeiros-videos.html">Vídeos</a></li>
+                <li><a href="Dicas/primeiras-dicas.html">Dicas</a></li>
 				<li><a>Serviços</a></li>
 				<li><a>Nossos Alunos</a></li>
 				<li><a>Fale Conosco</a></li>
@@ -43,11 +43,11 @@
         <nav class="menu-lateral col-2">
             <h2 class="offscreen">Menu Lateral</h2>
 			<ul>
-                <li><a title="A fazer o link correto">Home</a></li>
+                <li><a href="indexNew.html">Home</a></li>
 				<li><a href="escola.html">A Escola</a></li>
                 <li><a href="Cursos/index.html">Cursos</a></li>
-                <li><a>Artigos</a></li>
-				<li><a>Vídeos</a></li>
+                <li><a href="Artigos/primeiros-artigos.html">Artigos</a></li>
+				<li><a href="Videos/primeiros-videos.html">Vídeos</a></li>
                 <li><a href="Dicas/primeiras-dicas.html">Dicas</a></li>
 				<li><a>Serviços</a></li>
 				<li><a>Nossos Alunos</a></li>
