--- a/siteGV/escola.html
+++ b/siteGV/escola.html
@@ -16,7 +16,7 @@
         <nav class="menu-top">
             <h2 class="offscreen">Menu Topo</h2>
 			<ul>
-                <li><a href="../indexNew.html">Home</a></li>
+                <li><a href="indexNew.html">Home</a></li>
 				<li><a href="escola.html">A Escola</a></li>
                 <li><a href="Cursos/index.html">Cursos</a></li>
                 <li><a href="Artigos/primeiros-artigos.html">Artigos</a></li>
