path certo para voltar para home

--- a/siteGV/escola.html
+++ b/siteGV/escola.html
@@ -32,7 +32,7 @@
         <nav class="menu-lateral col-2">
             <h2 class="offscreen">Menu Lateral</h2>
 			<ul>
-				<li><a href="../indexNew.html">Home</a></li>
+				<li><a href="indexNew.html">Home</a></li>
 				<li><a href="escola.html">A Escola</a></li>
                 <li><a href="Cursos/index.html">Cursos</a></li>
                 <li><a href="Artigos/primeiros-artigos.html">Artigos</a></li>
