--- a/siteGV/escola.html
+++ b/siteGV/escola.html
@@ -84,7 +84,8 @@
         </div>
     </main>
     <footer>
-        <p>Venha tocar por essas bandas</p>
+        <h1>Venha tocar por essas bandas</h1>
+        <p>Rua Figueiredo Magalhães, 286 - sobreloja 201 - Copacabana <span id="telefone"><img src="img/red_phone-25px.png"> 3042-0950</span></p>
     </footer>
 
 </body>
