acertando o rodapé e outras coisas mais

--- a/siteGV/Videos/primeiros-videos.html
+++ b/siteGV/Videos/primeiros-videos.html
@@ -88,7 +88,7 @@
 
     <footer>
         <h1>Venha tocar por essas bandas</h1>
-        <p>Rua Figueiredo Magalhães, 286 - sobreloja 201 - Copacabana <span id="telefone"><img src="img/red_phone-25px.png"> 3042-0950</span></p>
+        <p>Rua Figueiredo Magalhães, 286 - sobreloja 201 - Copacabana <span id="telefone"><img src="../img/red_phone-25px.png"> 3042-0950</span></p>
     </footer>
     <script src="../js/controleVideos.js"></script>
 </body>
