--- a/siteGV/Cursos/index.html
+++ b/siteGV/Cursos/index.html
@@ -58,7 +58,7 @@
     </main>
     <footer>
         <h1>Venha tocar por essas bandas</h1>
-        <p>Rua Figueiredo Magalhães, 286 - sobreloja 201 - Copacabana <span id="telefone"><img src="img/red_phone-25px.png"> 3042-0950</span></p>
+        <p>Rua Figueiredo Magalhães, 286 - sobreloja 201 - Copacabana <span id="telefone"><img src="../img/red_phone-25px.png"> 3042-0950</span></p>
     </footer>
 
 </body>
