adicionado a pasta imagens para correção

--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -37,7 +37,7 @@
     <p>Aperte o botão para descobrir a largura da sua tela em pixels</p>
     <button id="figure-pixels" onclick="testaWindow()">Descubra</button>
         
-    <img id="palheta" src="../imagens/icon-palheta-GV.png" alt="palheta GV">
+    <img id="palheta" src="imagens/icon-palheta-GV.png" alt="palheta GV">
 	
 	<section id="formulario">
 	
