muda as cores e anima as palhetas do indice lateral

--- a/siteGV/Cursos/index.html
+++ b/siteGV/Cursos/index.html
@@ -32,15 +32,15 @@
         <nav class="menu-lateral col-2">
             <h2 class="offscreen">Menu Lateral</h2>
 			<ul>
-				<li><a href="../indexNew.html">Home</a></li>
-				<li><a href="../escola.html">A Escola</a></li>
-                <li><a href="index.html">Cursos</a></li>
-                <li><a href="../Artigos/primeiros-artigos.html">Artigos</a></li>
-				<li><a href="../Videos/primeiros-videos.html">Vídeos</a></li>
-                <li><a href="../Dicas/primeiras-dicas.html">Dicas</a></li>
-				<li><a>Serviços</a></li>
-				<li><a>Nossos Alunos</a></li>
-				<li><a>Fale Conosco</a></li>
+				<li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../indexNew.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Home</a></li>
+				<li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../escola.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">A Escola</a></li>
+                <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Cursos/index.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Cursos</a></li>
+                <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Artigos/primeiros-artigos.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Artigos</a></li>
+				<li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Videos/primeiros-videos.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Vídeos</a></li>
+                <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Dicas/primeiras-dicas.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Dicas</a></li>
+				<li><div class="palheta-GV-azul"></div><a>Serviços</a></li>
+				<li><div class="palheta-GV-azul"></div><a>Nossos Alunos</a></li>
+				<li><div class="palheta-GV-azul"></div><a>Fale Conosco</a></li>
 			</ul>
 		</nav>
         
@@ -60,6 +60,6 @@
         <h1>Venha tocar por essas bandas</h1>
         <p>Rua Figueiredo Magalhães, 286 - sobreloja 201 - Copacabana <span id="telefone"><img src="../img/red_phone-25px.png"> 3042-0950</span></p>
     </footer>
-
+    <script src="../js/animations.js"></script>
 </body>
 </html>
