--- a/siteGV/indexNew.html
+++ b/siteGV/indexNew.html
@@ -37,9 +37,9 @@
                 <li><a href="Artigos/primeiros-artigos.html">Artigos</a></li>
 				<li><a href="Videos/primeiros-videos.html">Vídeos</a></li>
                 <li><a href="Dicas/primeiras-dicas.html">Dicas</a></li>
-				<li><a>Serviços</a></li>
-				<li><a>Nossos Alunos</a></li>
-				<li><a>Fale Conosco</a></li>
+				<li><a title="link inativo">Serviços</a></li>
+				<li><a title="link inativo">Nossos Alunos</a></li>
+				<li><a title="link inativo">Fale Conosco</a></li>
             </ul>
 		</nav>
         
@@ -71,9 +71,9 @@
                 <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="Artigos/primeiros-artigos.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Artigos</a></li>
 				<li><div class="palheta-GV-azul"></div><a class="a-lateral" href="Videos/primeiros-videos.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Vídeos</a></li>
                 <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="Dicas/primeiras-dicas.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Dicas</a></li>
-				<li><div class="palheta-GV-azul"></div><a>Serviços</a></li>
-				<li><div class="palheta-GV-azul"></div><a>Nossos Alunos</a></li>
-				<li><div class="palheta-GV-azul"></div><a>Fale Conosco</a></li>
+				<li><div class="palheta-GV-azul"></div><a title="link inativo">Serviços</a></li>
+				<li><div class="palheta-GV-azul"></div><a title="link inativo">Nossos Alunos</a></li>
+				<li><div class="palheta-GV-azul"></div><a title="link inativo">Fale Conosco</a></li>
 			</ul>
 		</nav>
         
