alteração dos textos de A Escola e com a imagem do guitarrista

--- a/siteGV/indexNew.html
+++ b/siteGV/indexNew.html
@@ -113,7 +113,7 @@
         </section>
         </div>
         
-        <!-- <img id="guitarrista" src="img/guitarrista150.png"> -->
+        <img id="guitarrista" src="img/guitarrista150.png">
         
     </main>
 
