Adicionado novo texto em escolas e a imagem do guitarrista em todos as paginas

--- a/siteGV/Cursos/index.html
+++ b/siteGV/Cursos/index.html
@@ -59,6 +59,9 @@
                 <h2>Presenciais</h2>
             </section>
         </div>
+        
+        <img id="guitarrista" src="../img/guitarrista150.png">
+        
     </main>
     <footer>
         <h1>Venha tocar por essas bandas</h1>
