--- a/siteGV/Videos/primeiros-videos.html
+++ b/siteGV/Videos/primeiros-videos.html
@@ -88,6 +88,8 @@
         </section>
         </div>
         
+        <img id="guitarrista" src="../img/guitarrista150.png">
+        
     </main>
 
     <footer>
