formatado o texto de apresentação da equipe com diferentes tipos de fontes

--- a/siteGV/escola.html
+++ b/siteGV/escola.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>A Escola</title>
 	<link rel="stylesheet" href="css/estilo-respons.css">
+    <link href="https://fonts.googleapis.com/css?family=Playball|Unkempt" rel="stylesheet">
 </head>
 <body>
     <header id="header-logo" class="clearfix">
@@ -76,17 +77,17 @@
         <section id="equipe">
             <h2 class="h-GV">A Equipe</h2>
             <!--<p>Em seu corpo docente músicos por formação e grandes instrumentistas lecionam os cursos e fazem da música um grande aprendizado humano. Em alguns cursos a própria escola desenvolveu seu material didático e faz uso deles em seu dia a dia. </p>-->
-            <ul>
+            <ul class="equipe-GV">
                 <p>Formada por professores com bastante experiência didático e profissional, bem como por estudiosos da música. O Guitarra Virtual possui além disso um time de estagiários voltados a ajudar na pesquisa e no desenvolvimento de novas atividades voltadas para atender as necessidades dos alunos. Vamos a eles:</p>
-                <li>Aloysio Neves - Diretor Musical da escola. Criou a primeira faculdade de guitarra do brasil (Umesa 1986) e ensina guitarra, violão,baixo, teclado, além de improvisação/composição.</li>
-                <li>Chico Miceli - professor com ampla experiência no exterior, ensina guitarra, violão e produção musical.</li>
-                <li>Isaac de Moraes - Bacharel em guitarra pelo Conservatório brasileiro de Música,, é o professor de violão e guitarra e baixo do '’Sistema GV", além de cuidar das turmas de teoria musical.</li>
-                <li>Gustavo Schroeter - Professor de bateria, integrante da banda "A cor do Som', uma das maiores bandas do Brasil em atividade, possui ampla atividade didática, sendo também formado em música.</li>
-                <li>Leo Neiva - Professor de Baixo Elétrico.  Já participou de diversos trabalhos ligados ao jazz  e a música brasileira, suas especialidades.</li>
-                <li>Fernando Lopes- guitarrista especialista em Metal, trabalha na escola na área de luteria (regulagens e reparos)</li>
-                <li>Mercedes Fraga - Professora de canto, teclado e musicalizacão. Possui uma ampla gama de técnicas de ensino,utilizando os processos de gravação e edição, além de atuar como cantora de  música brasileira em seus projetos. É a diretora geral da escola.</li>
-                <li>Bernardo Amado - Guitarrista especialista em rock e blues, está trabalhando também na área de desenvolvimento do Guitarra Virtual.</li>
-                <li>Estagiários - Grupo destacado de alunos da escola que estão aprendendo o processo musical, didático e da producão, não só musical como do dia a dia da escola. Thiago Cavalcante, Ruy Raiol, Ilker Rocha, Lucas França e Mateus Rangel.</li>
+                <li><p><span class="membro-GV">Aloysio Neves</span> - Diretor Musical da escola. Criou a primeira faculdade de guitarra do brasil (Umesa 1986) e ensina guitarra, violão,baixo, teclado, além de improvisação/composição.</p></li>
+                <li><p><span class="membro-GV">Chico Miceli</span> - professor com ampla experiência no exterior, ensina guitarra, violão e produção musical.</p></li>
+                <li><p><span class="membro-GV">Isaac de Moraes</span> - Bacharel em guitarra pelo Conservatório brasileiro de Música,, é o professor de violão e guitarra e baixo do '’Sistema GV", além de cuidar das turmas de teoria musical.</p></li>
+                <li><p><span class="membro-GV">Gustavo Schroeter</span> - Professor de bateria, integrante da banda "A cor do Som', uma das maiores bandas do Brasil em atividade, possui ampla atividade didática, sendo também formado em música.</p></li>
+                <li><p><span class="membro-GV">Leo Neiva</span> - Professor de Baixo Elétrico.  Já participou de diversos trabalhos ligados ao jazz  e a música brasileira, suas especialidades.</p></li>
+                <li><p><span class="membro-GV">Fernando Lopes</span> - guitarrista especialista em Metal, trabalha na escola na área de luteria (regulagens e reparos).</p></li>
+                <li><p><span class="membro-GV">Mercedes Fraga</span> - Professora de canto, teclado e musicalizacão. Possui uma ampla gama de técnicas de ensino,utilizando os processos de gravação e edição, além de atuar como cantora de  música brasileira em seus projetos. É a diretora geral da escola.</p></li>
+                <li><p><span class="membro-GV">Bernardo Amado</span> - Guitarrista especialista em rock e blues, está trabalhando também na área de desenvolvimento do Guitarra Virtual.</p></li>
+                <li><p><span class="membro-GV">Estagiários</span> - Grupo destacado de alunos da escola que estão aprendendo o processo musical, didático e da producão, não só musical como do dia a dia da escola. <span class="estagiario-GV">Thiago Cavalcante, Ruy Raiol, Ilker Rocha, Lucas França e Mateus Rangel</span>.</p></li>
             </ul>
     
         </section>
