fonte do site mudada para cursive

--- a/siteGV/indexNew.html
+++ b/siteGV/indexNew.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Site GV Responsivo</title>
 	<link rel="stylesheet" href="css/estilo-respons.css">
+    <link href="https://fonts.googleapis.com/css?family=Playball|Unkempt" rel="stylesheet">
 </head>
 <body>
     <!-- Menu original
@@ -93,11 +94,11 @@
             <h2>Destaques</h2>
             <ul class="ul-GV">
                 <li>
-                    <h3>Nova seção <a href="Dicas/primeiras-dicas.html">Dicas</a></h3>
+                    <h3>Nova seção <a class="link-destaque" href="Dicas/primeiras-dicas.html">Dicas</a></h3>
                     <p>O mestre Aloysio Neves dá dicas para o seu estudo do instrumento.</p>
                 </li>
                 <li>
-                    <h3>Nova seção <a href="Videos/primeiros-videos.html">Vídeos</a></h3>
+                    <h3>Nova seção <a class="link-destaque" href="Videos/primeiros-videos.html">Vídeos</a></h3>
                     <p>Seção com vídeos dos alunos, shows, e gravações.</p>
                 </li>
             </ul>
