consertado bug no menu pra ir para os videos

--- a/siteGV/Dicas/primeiras-dicas.html
+++ b/siteGV/Dicas/primeiras-dicas.html
@@ -40,7 +40,7 @@
 				<li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../escola.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">A Escola</a></li>
                 <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Cursos/index.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Cursos</a></li>
                 <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Artigos/primeiros-artigos.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Artigos</a></li>
-				<li><div class="palheta-GV-azul"></div><a class="a-lateral" href="./Videos/primeiros-videos.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Vídeos</a></li>
+				<li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Videos/primeiros-videos.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Vídeos</a></li>
                 <li><div class="palheta-GV-azul"></div><a class="a-lateral" href="../Dicas/primeiras-dicas.html" onmouseover="giraPalheta(this)" onmouseout="paraPalheta(this)">Dicas</a></li>
 				<li><div class="palheta-GV-azul"></div><a title="link inativo">Serviços</a></li>
 				<li><div class="palheta-GV-azul"></div><a title="link inativo">Nossos Alunos</a></li>
