--- a/siteGV/index.html
+++ b/siteGV/index.html
@@ -77,6 +77,14 @@
                     $(".antihorario").css("animation-play-state", "paused");
                     $(this).text("Girar");
                 }
+                /*if (window.innerWidth > 400) {
+                    alert("width > 400px");
+                }
+                else {
+                    alert("width < 400px");
+                }
+                alert("width = " + window.innerWidth + "px");*/
+                alert($(window).width());
             });
         });
     </script>
