--- a/siteGV/index.html
+++ b/siteGV/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Guitarra Virtual Em Reforma</title>
 	<link rel="stylesheet" href="css/estilo.css">
     <style>
