--- a/siteGV/index.html
+++ b/siteGV/index.html
@@ -114,6 +114,7 @@
                     <div class="gear antihorario"></div>
                 </div>
                 <button>Parar</button>
+                <p>Testando</p>
             </section>
             
         </div>
