agora sem ver o tamanho da tela

--- a/siteGV/index.html
+++ b/siteGV/index.html
@@ -82,14 +82,7 @@
                     $(".antihorario").css("animation-play-state", "paused");
                     $(this).text("Girar");
                 }
-                /*if (window.innerWidth > 400) {
-                    alert("width > 400px");
-                }
-                else {
-                    alert("width < 400px");
-                }
-                alert("width = " + window.innerWidth + "px");*/
-                alert($(window).width());
+                //alert($(window).width());
             });
         });
     </script>
