paginas de jeupays

--- a/siteTreino/semFramework/index.html
+++ b/siteTreino/semFramework/index.html
@@ -62,7 +62,7 @@
 	
 	<hr>
 	
-	<section id="tabela">
+	<!--<section id="tabela">
         <h1>Tabelas</h1>
         <table>
             <caption>Tabela Teste</caption>
@@ -101,7 +101,7 @@
                 </tr>
             </tbody>
         </table>
-	</section>
+	</section>-->
 	
     <hr>
         
