adicionado a funcionalidade de virar cartas

--- a/siteTreino/jogoMemoria.html
+++ b/siteTreino/jogoMemoria.html
@@ -24,6 +24,15 @@
     <div id="jogo">
     
     </div>
+	
+	<!-- Roda carta -->
+	<section class="container">
+		<div id="card" class="tshabalala" onclick="flipCard(this)">
+			<figure class="front">1</figure>
+			<figure class="back">2</figure>
+		</div>
+	</section>
+	<button id="flip-card">Flip</button>
     
     <script src="memoria.js"></script>
 </body>
