--- a/siteTreino/index.html
+++ b/siteTreino/index.html
@@ -6,5 +6,13 @@
     <title>Meu Site de Treino</title>
 </head>
 <body>
+    <nav>
+        <h1>Jogos</h1>
+        <ul>
+            <h2>Jogo da memória</h2>
+            <li><a href="jogoMemoria.html">Números</a></li>
+            <li><a href="memoriaBandeiras.html">Bandeiras de países</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
