--- a/siteTreino/memoriaBandeiras.html
+++ b/siteTreino/memoriaBandeiras.html
@@ -12,9 +12,9 @@
     
     <!-- Opções do jogo -->
     <div id="opcoes">
-        <input type="radio" name="dificuldade" value="facil">Fácil (4 cartas)<br>
-        <input type="radio" name="dificuldade" value="medio">Médio (6 cartas)<br>
-        <input type="radio" name="dificuldade" value="dificil">Difícil (8 cartas)<br>
+        <input type="radio" id="dif-facil" name="dificuldade" value="facil"><label for="dif-facil">Fácil (4 cartas)</label><br>
+        <input type="radio" id="dif-medio" name="dificuldade" value="medio"><label for="dif-medio">Médio (6 cartas)</label><br>
+        <input type="radio" id="dif-dificil" name="dificuldade" value="dificil"><label for="dif-dificil">Difícil (8 cartas)</label><br>
         <!--<input type="radio" name="dificuldade" value="desafio">Desafiador (20 cartas)<br>-->
         <button id="iniciar" onclick="comecarJogoBandeiras()">Iniciar</button>
     </div>
