--- a/mines/mines.html
+++ b/mines/mines.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <noscript>Javascript must be enabled in order for the game to work properly</noscript>
         <h1>Mines Game</h1>
         <nav id="menu" class="menu">
             <h2>Menu</h2>
